[package]
name = "stylers"
version = "1.0.0-alpha"
edition = "2024"
authors = ["Abishek P"]
license = "MIT"
repository = "https://github.com/abishekatp/stylers"
description = "Scoped CSS for Rust web frameworks like leptos"
keywords = ["web", "css", "leptos"]
categories = ["web-programming"]
readme = "../README.md"

[features]
## By default, includes `build` and `build-script` features
default = ["build", "build-script"]
## Exports the `build` function
build = []
## Adds `clap` derive impls to the builder
cli = ["dep:clap"]
## Assumes the `build` function is being called within a build script.
## Disable this is you are running this script elsewhere to avoid
## random logs to stdout like `cargo::warning= stylers debug start`
build-script = []
clap = ["dep:clap"]

[dependencies]
glob = "0.3.1"
syn = { version = "2.0.15", features = ["extra-traits", "full", "visit"] }
stylers_core = { version = "1.0.2", path = "../stylers_core" }
stylers_macro = "1.0.2"
proc-macro2 = "1.0.60"
color-eyre = "0.6.3"
tracing = "0.1.41"
camino = "1.1.9"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
document-features = "0.2.11"
clap = { version = "4.5.36", features = ["derive"], optional = true }
